--- a/src/components/Space/Space.module.css
+++ b/src/components/Space/Space.module.css
@@ -1,5 +1,12 @@
 .space {
   width: 100%;
   height: 100%;
-  border: solid 1px black;
+  border: solid 1px grey;
+  border-radius: 5px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+  gap: 10px;
+  box-sizing: border-box;
 }
