--- a/src/components/Column/Column.module.scss
+++ b/src/components/Column/Column.module.scss
@@ -6,6 +6,10 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: solid 3px whitesmoke;
 }
 
 .column__header {
@@ -14,7 +18,8 @@
   display: flex;
   justify-items: center;
   align-items: center;
-  font-size: 10px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .column__content {
@@ -23,4 +28,12 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.column--border-red {
+  border: solid 3px red;
+}
+
+.column--border-blue {
+  border: solid 3px;
 }
